methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:3: error: not found: value doite
  doite()
  ^FlowerCase:19: error: value Blue is not a member of object java.awt.Color
  faireFleur(Color.Blue)
                   ^